--- a/rs-selectors/package.json
+++ b/rs-selectors/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-webpack-plugin": "^4.0.1",
+    "favicons-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
