--- a/rs-selectors/package.json
+++ b/rs-selectors/package.json
@@ -35,6 +35,10 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+    "js-confetti": "^0.11.0"
+  },
+  "dependencies": {
+    "js-confetti": "^0.11.0"
   }
 }
