--- a/rs-selectors/.eslintrc.json
+++ b/rs-selectors/.eslintrc.json
@@ -31,8 +31,11 @@
         "default": "array"
       }
     ],
-    "max-lines-per-function": ["error", 40],
+    "max-lines-per-function": ["error", 60],
     "@typescript-eslint/explicit-function-return-type": "error",
-    "@typescript-eslint/no-unnecessary-type-assertion": "error"
+    "@typescript-eslint/no-unnecessary-type-assertion": "error",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "import/no-cycle": "off",
+    "import/no-mutable-exports": "off"
   }
 }
